Allow socket redirection with assuan_socket_connect.

* src/assuan-socket-connect.c (assuan_socket_connect): Use
set_socketaddr function.
--

GnuPG-bug-id: 2253
Signed-off-by: Werner Koch <wk@gnupg.org>